--- a/test/fixtures/role_option_operations.yml
+++ b/test/fixtures/role_option_operations.yml
@@ -9,6 +9,7 @@
 #  eliminado   :boolean          default(FALSE)
 #  created_at  :datetime         not null
 #  updated_at  :datetime         not null
+#  options_id  :bigint(8)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
